# grapher

./: .gitignore  .gitmodules  Makefile  example  force-graph.cabal  grapher.cabal  todo.txt
bench/: Main.hs
cabal-dev/: cabal.config
progs/: Generate.hs  Gloss.hs  PNG.hs
src/: Defaults.hs  Extensions.hs  Main.hs  Object.hs  Physics.hs  Tests.hs  Time.hs  Vector2.hs  World.hs
src/Backend/: Backend.hs  Cairo.hs
src/ForceGraph/: Ball.hs  Circle.hs  Defaults.hs  EdgeMatrix.hs  Extensions.hs  Generation.hs  LinkMatrix.hs  Object.hs  Particle.hs  Physics.hs  Rectangle.hs  Time.hs  Types.hs  Utility.hs  Vector2D.hs  Vector2F.hs  World.hs
src/ForceGraph/Backend/: Backend.hs  Cairo.hs
src/Grapher/: AdjacencyMatrix.hs  Ball.hs  Generation.hs  LinkMatrix.hs  Parser.hs  Particle.hs  Physics.hs  Types.hs  Util.hs  Utility.hs  Vector2F.hs  World.hs
src/Math/: Algebra.hs  Vector2.hs
tests/: Main.hs  Tests.hs  Vector2.hs
