name:          force-graph
version:       0.1.0.0
synopsis:      Render graphs using verlet integration
homepage:      github.com/daoo/force-graph
license:       PublicDomain
author:        daoo
build-type:    Simple
cabal-version: >=1.8

library
  exposed-modules:
    ForceGraph.Ball
    ForceGraph.Defaults
    ForceGraph.Particle
    ForceGraph.Types
    ForceGraph.Utility
    ForceGraph.Vector2D
    ForceGraph.World
  hs-source-dirs: src
  build-depends: base, array

executable force-graph
  main-is: src/Main.hs
  build-depends: base, array, force-graph, gloss
  ghc-options: -Wall -fno-warn-orphans

test-suite force-graph-tests
  type: exitcode-stdio-1.0
  build-depends: base, force-graph, QuickCheck, test-framework, test-framework-quickcheck2
  main-is: Main.hs
  hs-source-dirs: tests
