name:          grapher
version:       0.1.0.0
synopsis:      Render graphs using verlet integration
homepage:      github.com/daoo/grapher
license:       PublicDomain
author:        daoo
build-type:    Simple
cabal-version: >=1.8

library
  other-modules:
    Grapher.Particle
    Grapher.Types
  exposed-modules:
    Grapher.AdjacencyMatrix
    Grapher.Generation
    Grapher.Vector2F
    Grapher.World
  hs-source-dirs: src
  build-depends:
    base,
    vector,
    QuickCheck

executable grapher-interactive
  main-is: progs/Gloss.hs
  build-depends: base, grapher, QuickCheck, gloss

executable grapher-png
  main-is: progs/PNG.hs
  build-depends: base, grapher, QuickCheck, JuicyPixels, Rasterific

test-suite grapher-tests
  type: exitcode-stdio-1.0
  build-depends:
    base,
    grapher,
    tasty,
    tasty-quickcheck,
    QuickCheck
  main-is: Main.hs
  hs-source-dirs: tests

benchmark grapher-bench
  type: exitcode-stdio-1.0
  build-depends:
    base,
    grapher,
    criterion
  main-is: Main.hs
  hs-source-dirs: bench
