name:          grapher
version:       0.1.0.0
synopsis:      Render graphs using verlet integration
homepage:      github.com/daoo/grapher
license:       PublicDomain
author:        daoo
build-type:    Simple
cabal-version: >=1.8

library
  exposed-modules:
    Grapher.AdjacencyMatrix
    Grapher.Generation
    Grapher.Parser
    Grapher.Particle
    Grapher.World
  hs-source-dirs: src
  build-depends:
    attoparsec,
    base,
    containers,
    language-dot,
    linear,
    mtl,
    text,
    vector,
    vector-th-unbox

executable grapher-interactive
  main-is: progs/Gloss.hs
  build-depends: base, grapher, linear, vector, gloss

executable grapher-png
  main-is: progs/PNG.hs
  build-depends: base, grapher, linear, vector, JuicyPixels, Rasterific

executable grapher-generate
  main-is: progs/Generate.hs
  build-depends: base, text, grapher

benchmark grapher-bench
  type: exitcode-stdio-1.0
  build-depends:
    base,
    grapher,
    criterion
  main-is: Main.hs
  hs-source-dirs: bench
